--- a/frontend/view/company.html
+++ b/frontend/view/company.html
@@ -26,7 +26,10 @@
             <li class="nav-item">
                 <a class="nav-link link-text" href="service.html">service</a>
             </li>
-            li
+            <li class="nav-item">
+                <a class="nav-link link-text" href="#">account</a>
+                
+            </li>
         </ul>
     </div>
     <div class="tool">
